syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.codegen.wi.suwiml.proto.uwvdossierinkomstenvoorbewerkingbvv_v0100";
option java_outer_classname = "UWVDossierInkomstenVoorbewerkingBVV_v0100";

package io.codegen.wi.suwiml.proto.uwvdossierinkomstenvoorbewerkingbvv_v0100;

import "google/api/annotations.proto";

// Service definition for UWVDossierInkomstenVoorbewerkingBVV-v0100
service UWVDossierInkomstenVoorbewerkingBVV_v0100Service {

  // Operation {http://bkwi.nl/SuwiML/Diensten/UWVDossierInkomstenVoorbewerkingBVV/v0100}UWVPersoonsIkvInfo
  rpc UWVPersoonsIkvInfoRequest (UWVPersoonsIkvInfo) returns (UWVPersoonsIkvInfoResponse) {
    option (google.api.http) = {
      post: "/UWVDossierInkomstenVoorbewerkingBVV-v0100/UWVPersoonsIkvInfo"
    };
  }

}

message UWVPersoonsIkvInfo { // QName {http://bkwi.nl/SuwiML/Diensten/UWVDossierInkomstenVoorbewerkingBVV/v0100}UWVPersoonsIkvInfo
  string burgerservicenr = 1; // QName Burgerservicenr
  PeriodeGegevensvraagIko periode_gegevensvraag_iko = 2; // QName PeriodeGegevensvraagIko

  message PeriodeGegevensvraagIko { // QName PeriodeGegevensvraagIko
    string dat_b_periode = 1; // QName DatBPeriode
    string dat_e_periode = 2; // QName DatEPeriode
  }
}

message UWVPersoonsIkvInfoResponse { // QName {http://bkwi.nl/SuwiML/Diensten/UWVDossierInkomstenVoorbewerkingBVV/v0100}UWVPersoonsIkvInfoResponse
  Schuldenaar schuldenaar = 1; // QName Schuldenaar
  PeriodeGegevensleveringIko periode_gegevenslevering_iko = 2; // QName PeriodeGegevensleveringIko
  FWI f_w_i = 3; // QName {http://bkwi.nl/SuwiML/FWI/v0205}FWI
  bool niets_gevonden = 4; // QName {http://bkwi.nl/SuwiML/FWI/v0205}NietsGevonden

  message Schuldenaar { // QName Schuldenaar
    string burgerservicenr = 1; // QName Burgerservicenr
    repeated Inkomstenverhouding inkomstenverhouding = 2; // QName Inkomstenverhouding

    message Inkomstenverhouding { // QName Inkomstenverhouding
      string volgnr_ikv = 1; // QName VolgnrIkv
      string dat_b_ikv = 2; // QName DatBIkv
      string dat_e_ikv = 3; // QName DatEIkv
      AdministratieveEenheid administratieve_eenheid = 4; // QName AdministratieveEenheid
      repeated Inkomstenperiode inkomstenperiode = 5; // QName Inkomstenperiode
      repeated Inkomstenopgave inkomstenopgave = 6; // QName Inkomstenopgave

      message AdministratieveEenheid { // QName AdministratieveEenheid
        string naam_administratieve_eenheid = 1; // QName NaamAdministratieveEenheid
        string loonheffingennr = 2; // QName Loonheffingennr
        repeated FeitelijkAdresAeh feitelijk_adres_aeh = 3; // QName FeitelijkAdresAeh

        message FeitelijkAdresAeh { // QName FeitelijkAdresAeh
          string dat_b_adres = 1; // QName DatBAdres
          string dat_e_adres = 2; // QName DatEAdres
          Straatadres straatadres = 3; // QName Straatadres
          Postbusadres postbusadres = 4; // QName Postbusadres
          StraatadresBuitenland straatadres_buitenland = 5; // QName StraatadresBuitenland
          PostbusadresBuitenland postbusadres_buitenland = 6; // QName PostbusadresBuitenland

          message Straatadres { // QName Straatadres
            string locatieoms = 1; // QName Locatieoms
            string postcd = 2; // QName Postcd
            string woonplaatsnaam = 3; // QName Woonplaatsnaam
            string gemeentenaam = 4; // QName Gemeentenaam
            string straatnaam = 5; // QName Straatnaam
            string huisnr = 6; // QName Huisnr
            string huisnrtoevoeging = 7; // QName Huisnrtoevoeging
            string woonbootverwijzing = 8; // QName Woonbootverwijzing
            string woonwagenverwijzing = 9; // QName Woonwagenverwijzing
          }

          message Postbusadres { // QName Postbusadres
            string locatieoms = 1; // QName Locatieoms
            string postcd = 2; // QName Postcd
            string woonplaatsnaam = 3; // QName Woonplaatsnaam
            string gemeentenaam = 4; // QName Gemeentenaam
            string postbusnr = 5; // QName Postbusnr
          }

          message StraatadresBuitenland { // QName StraatadresBuitenland
            string locatieoms_buitenland = 1; // QName LocatieomsBuitenland
            string postcd_buitenland = 2; // QName PostcdBuitenland
            string woonplaatsnaam_buitenland = 3; // QName WoonplaatsnaamBuitenland
            string regionaam_buitenland = 4; // QName RegionaamBuitenland
            string landencd_iso = 5; // QName LandencdIso
            string landsnaam = 6; // QName Landsnaam
            string straatnaam_buitenland = 7; // QName StraatnaamBuitenland
            string huisnr_buitenland = 8; // QName HuisnrBuitenland
          }

          message PostbusadresBuitenland { // QName PostbusadresBuitenland
            string locatieoms_buitenland = 1; // QName LocatieomsBuitenland
            string postcd_buitenland = 2; // QName PostcdBuitenland
            string woonplaatsnaam_buitenland = 3; // QName WoonplaatsnaamBuitenland
            string regionaam_buitenland = 4; // QName RegionaamBuitenland
            string landencd_iso = 5; // QName LandencdIso
            string landsnaam = 6; // QName Landsnaam
            string postbusnr_buitenland = 7; // QName PostbusnrBuitenland
          }
        }
      }

      message Inkomstenperiode { // QName Inkomstenperiode
        string dat_b_ikp = 1; // QName DatBIkp
        string dat_e_ikp = 2; // QName DatEIkp
        string cd_srt_ikv = 3; // QName CdSrtIkv
      }

      message Inkomstenopgave { // QName Inkomstenopgave
        string dat_b_iko = 1; // QName DatBIko
        string dat_e_iko = 2; // QName DatEIko
        StandaardBedrType bedr_loon_lb_premie_volksverz = 3; // QName BedrLoonLbPremieVolksverz
        StandaardBedrType bedr_ingehouden_lb_premie_volksverz = 4; // QName BedrIngehoudenLbPremieVolksverz
        StandaardBedrType bedr_vakantietoeslag = 5; // QName BedrVakantietoeslag
        StandaardBedrType bedr_opgb_recht_vakantietoeslag = 6; // QName BedrOpgbRechtVakantietoeslag
        StandaardBedrType bedr_extra_prd_salaris = 7; // QName BedrExtraPrdSalaris
        StandaardBedrType bedr_opgb_recht_extra_prd_salaris = 8; // QName BedrOpgbRechtExtraPrdSalaris
        StandaardBedrType bedr_ingehouden_bijdrage_zvw = 9; // QName BedrIngehoudenBijdrageZvw
      }
    }
  }

  message PeriodeGegevensleveringIko { // QName PeriodeGegevensleveringIko
    string dat_b_periode = 1; // QName DatBPeriode
    string dat_e_periode = 2; // QName DatEPeriode
  }

  message FWI { // QName {http://bkwi.nl/SuwiML/FWI/v0205}FWI
    repeated MeldingType fout = 1; // QName Fout
    repeated MeldingType waarschuwing = 2; // QName Waarschuwing
    repeated MeldingType informatie = 3; // QName Informatie
  }
}


message BronType {
  string d_n = 1; // QName DN
}

message MeldingType {
  string code = 1; // QName Code
  string tekst = 2; // QName Tekst
  repeated string detail = 3; // QName Detail
  BronType bron = 4; // QName Bron
}

message StandaardBedrType {
  string cd_munteenheid = 1; // QName CdMunteenheid
  string cd_positief_negatief = 2; // QName CdPositiefNegatief
  string waarde_bedr = 3; // QName WaardeBedr
  string cd_periode_eenheid_geldigheid_bedr = 4; // QName CdPeriodeEenheidGeldigheidBedr
}
